fix jump problem

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -495,3 +495,36 @@
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
 }
+
+.flex-row {
+  list-style-type: none;
+  border-bottom: 1px solid #bdbdbd;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.flex-row .title div {
+  font-weight: 700;
+}
+
+.flex-row div {
+  box-sizing: border-box;
+  padding: 0.4rem;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+}
+
+.cell-input {
+  padding: 0;
+  border-style: none;
+  font-size: 100%;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  width: 100%;
+  height: 100%;
+}
+
+.cell-input:focus {
+  outline-style: none;
+  box-sizing: border-box;
+  border-bottom: 2px solid #2196f3;
+}
